<resources>
    <string name="app_name">10119911Lat2</string>
    <string name="facebook">connect with your facebook</string>
    <string name="noAccount">doesn\'t have account ?</string>
    <string name="regis">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Retype Password</string>
    <string name="number">Phone Number</string>
    <string name="male">Male</string>
    <string name="bloodt">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="personal">Personal</string>
    <string name="org">Organization</string>
    <string name="job">Job</string>
    <string name="address">Home Address</string>
    <string name="location">Default Location</string>
    <string name="privacy">Agree with Terms and Conditions </string>
    <string name="AlmostT">Almost There</string>
    <string name="descAlmostT1">Thank you for registering with us. One more</string>
    <string name="descAlmostT2">step,you need to check your email to</string>
    <string name="descAlmostT3">to active your account</string>
    <string name="verify">Verify</string>
    <string name="verification">Verify your Account</string>
    <string name="descVerify">We have send verification code to your email</string>
    <string name="codeVerify">enter verification code here...</string>
    <string name="send">send</string>
    <string name="noCode">doesn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="name">Mochamad Tegar Dwi S</string>
    <string name="blood">Blood type : A </string>
    <string name="bloodGive">Blood Give</string>
    <string name="BloodReceive">Blood Receive</string>
    <string name="ty">Thanks</string>
    <string name="search">Search Donor</string>
    <string name="bloodNeeded">Blood Needed</string>
    <string name="msg">Message</string>
    <string name="history">Donor History</string>
    <string name="descSearch">Search donor near you</string>
    <string name="descNeeded">4 Users need blood</string>
    <string name="descMgs">5 New Messages</string>
    <string name="descHistory">5 Gives, 2 Received</string>
</resources>