<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".Verify">

    <TextView
        android:id="@+id/almostT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/descAlmostT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/descVerify"
        android:textColor="@color/shadowHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/almostT" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/codeVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/codeVerify"
        android:textColorHint="@color/shadowHeader"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:backgroundTint="@color/shadowHeader"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/descAlmostT1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_border"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="28dp"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/codeVerify"/>

    <TextView
        android:id="@+id/noCode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noCode"
        android:textColor="@color/shadowHeader"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/noCode1"
        app:layout_constraintTop_toTopOf="@id/noCode1"/>

</androidx.constraintlayout.widget.ConstraintLayout>