<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Profile">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:background="@drawable/shadow_rect"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:src="@mipmap/ic_header_profile"
        android:scaleType="fitXY"
        android:background="@drawable/shadow_rect"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableRight="@mipmap/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableLeft="@mipmap/ic_side_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/photoProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_pic"
        android:src="@drawable/tegar"
        android:paddingBottom="20dp"
        android:paddingEnd="13dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/lightBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/photoProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/bloodtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="10dp"
        android:background="@drawable/shadow_rect"
        app:layout_constraintTop_toBottomOf="@id/bloodtype">


        <!--Numbers-->
        <TextView
            android:id="@+id/seventyfive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="75"
            android:textColor="@color/lightBlue"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/onehundred"/>
        <TextView
            android:id="@+id/onehundred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textColor="@color/lightBlue"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="@id/seventyfive"
            app:layout_constraintStart_toEndOf="@id/seventyfive"
            app:layout_constraintEnd_toStartOf="@id/threehundred30"/>
        <TextView
            android:id="@+id/threehundred30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="330"
            android:textColor="@color/lightBlue"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/onehundred"
            app:layout_constraintEnd_toEndOf="parent"/>
        <!--Text-->
        <TextView
            android:id="@+id/bloodGive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bloodGive"
            android:textColor="@color/fontDesc"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/seventyfive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/onehundred"/>
        <TextView
            android:id="@+id/receivedBlood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BloodReceive"
            android:textColor="@color/fontDesc"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/onehundred"
            app:layout_constraintStart_toEndOf="@id/seventyfive"
            app:layout_constraintEnd_toStartOf="@id/threehundred30"/>
        <TextView
            android:id="@+id/thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty"
            android:textColor="@color/fontDesc"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/threehundred30"
            app:layout_constraintStart_toEndOf="@id/onehundred"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
<!--First-->
    <ImageView
        android:id="@+id/logoSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_search_donor"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoNeedBlood"/>
    <ImageView
        android:id="@+id/logoNeedBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_blood_needed"
        app:layout_constraintTop_toTopOf="@id/logoSearch"
        app:layout_constraintStart_toEndOf="@id/logoSearch"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/logoSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtNeedBlood"/>
    <TextView
        android:id="@+id/txtNeedBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bloodNeeded"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/logoSearch"
        app:layout_constraintStart_toEndOf="@id/txtSearch"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/descSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descSearch"
        android:textColor="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/txtSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/descNeeded"
        />
    <TextView
        android:id="@+id/descNeeded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descNeeded"
        android:textColor="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/txtSearch"
        app:layout_constraintStart_toEndOf="@id/descSearch"
        app:layout_constraintEnd_toEndOf="parent"
        />
<!--Second-->
    <ImageView
        android:id="@+id/logoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_message"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/descSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoNeedBlood"/>
    <ImageView
        android:id="@+id/logoHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_donor_history"
        app:layout_constraintTop_toTopOf="@id/logoMessage"
        app:layout_constraintStart_toEndOf="@id/logoMessage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/logoMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtNeedBlood"/>
    <TextView
        android:id="@+id/txtHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/logoHistory"
        app:layout_constraintStart_toEndOf="@id/txtSearch"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/descMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descMgs"
        android:textColor="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/txtMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/descNeeded"
        />
    <TextView
        android:id="@+id/descHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descHistory"
        android:textColor="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/txtHistory"
        app:layout_constraintStart_toEndOf="@id/descMessage"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>