<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

<!--HEADER-->
    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:divider="@android:color/black"
        android:dividerHeight="2px"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_header"
            />
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_header_back"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regis"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="75dp"/>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/username"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/header"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="2dp"
        android:hint="Email"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/username"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="2dp"
        android:hint="@string/number"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/email"
        />

    <ImageView
        android:id="@+id/on"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/ic_register_radio_on"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintStart_toStartOf="@id/phone"
        />

    <TextView
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Male"
        android:textSize="18sp"
        android:textColor="@color/fontDesc"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/on"
        app:layout_constraintTop_toTopOf="@id/on"/>

    <ImageView
        android:id="@+id/off"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/ic_register_radio_off"
        android:layout_marginTop="20dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintStart_toEndOf="@id/male"
        app:layout_constraintTop_toBottomOf="@id/phone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:textSize="18sp"
        android:textColor="@color/fontDesc"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/off"
        app:layout_constraintTop_toTopOf="@id/off"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/blood"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/bloodt"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        android:drawableRight="@mipmap/ic_register_dropdown"
        app:layout_constraintTop_toBottomOf="@id/on"
        app:layout_constraintStart_toStartOf="@id/phone"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reshus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/reshus"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        android:drawableRight="@mipmap/ic_register_dropdown"
        app:layout_constraintTop_toBottomOf="@id/on"
        app:layout_constraintStart_toEndOf="@id/blood"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/blood"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/repassword"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/password"
        />

    <ImageView
        android:id="@+id/on2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/ic_register_radio_on"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/repassword"
        app:layout_constraintStart_toStartOf="@id/repassword"
        />

    <TextView
        android:id="@+id/personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        android:textSize="18sp"
        android:textColor="@color/fontDesc"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/on2"
        app:layout_constraintTop_toTopOf="@id/on2"/>

    <ImageView
        android:id="@+id/off2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/ic_register_radio_off"
        android:layout_marginTop="20dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintStart_toEndOf="@id/personal"
        app:layout_constraintTop_toBottomOf="@id/repassword"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/org"
        android:textSize="18sp"
        android:textColor="@color/fontDesc"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/off2"
        app:layout_constraintTop_toTopOf="@id/off2"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/job"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        android:drawableRight="@mipmap/ic_register_dropdown"
        app:layout_constraintTop_toBottomOf="@id/on2"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/address"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        app:layout_constraintTop_toBottomOf="@id/job"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/location"
        android:textColorHint="@color/fontDesc"
        android:textColor="@color/fontDesc"
        android:textSize="16sp"
        android:backgroundTint="@color/fontDesc"
        android:drawableRight="@mipmap/ic_blood_needed_location"
        app:layout_constraintTop_toBottomOf="@id/address"
        />
    <ImageView
        android:id="@+id/term"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/ic_register_terms_on"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintStart_toStartOf="@id/phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textColor="@color/fontDesc"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@id/term"
        app:layout_constraintTop_toTopOf="@id/term"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:textColor="@color/lightBlue"
        android:textAllCaps="true"
        android:background="@drawable/btn_border_white"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/term"/>


</androidx.constraintlayout.widget.ConstraintLayout>