<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_welcome_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/logoWelcome"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/loginUsername"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="LOGIN"
        android:textColor="@color/white"
        android:background="@drawable/btn_border"
        app:layout_constraintTop_toBottomOf="@id/loginPassword"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="OR"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_facebook"
        android:paddingStart="65dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/facebook"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:background="@drawable/btn_border"
        app:layout_constraintTop_toBottomOf="@id/or"/>

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/noAccount"
        android:textColor="@color/shadowHeader"
        app:layout_constraintTop_toBottomOf="@id/btnLoginFb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/txt_regis"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:background="@color/lightBlue"
        android:text="Register."
        android:textColor="@color/white"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="@id/noAccount"
        app:layout_constraintStart_toEndOf="@id/noAccount"/>


</androidx.constraintlayout.widget.ConstraintLayout>